K8S/enumerados-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: enumeradonpservice-srv
spec:
  type: NodePort
  selector:
    app: enumeradoservice
  ports:
    - name: enumeradoservice
      protocol: TCP
      port: 80
      targetPort: 80
