K8S/inventarios-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventarios-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventarioservice
  template:
    metadata:
      labels:
        app: inventarioservice
    spec:
      containers:
        - name: inventarioservice
          image: rualitux/inventarioservice:latest
---
apiVersion: v1
kind: Service
metadata:
    name: inventarios-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: inventarioservice
  ports:
  - name: inventarioservice
    protocol: TCP
    port: 80
    targetPort: 80
