K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: sicp.com
      http:
        paths:
          - path: /api/enumerados
            pathType: Prefix
            backend:
              service:
                name: enumerados-clusterip-srv
                port:
                  number: 80
          - path: /api/i
            pathType: Prefix
            backend:
              service:
                name: inventarios-clusterip-srv
                port:
                  number: 80
